Fixed Search not working  , home display -card alignment

--- a/style.css
+++ b/style.css
@@ -4,6 +4,23 @@
   box-sizing: border-box;
 }
 
+#root {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 20px;
+}
+
+#shows-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; /* Align cards to the left */
+    gap: 10px;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
 body {
   font-family: "Roboto", serif;
   font-weight: 100;
@@ -14,23 +31,24 @@ body {
   background-color: #000000;
 }
 
-#root {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 20px;
-  padding: 20px;
-}
-
 header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: #41380f;
   color: white;
   text-align: center;
   padding: 80px 0;
-  font-weight: bold;
   background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),  url(https://images.pexels.com/photos/1764338/pexels-photo-1764338.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1;);
   background-size:cover;
- 
+
+}
+
+h1{
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-size: 80px;
 }
 
 .inp-searches {
@@ -44,6 +62,14 @@ header {
   margin-top: 20px 20px;
   padding: 20px 20px;
   outline: none;
+}
+
+#show-search-box{
+  margin: 40px;
+  outline: none;
+  background-color: #fbfbfb;
+  padding: 10px;
+   border: none;
 }
 
 #search-box {
@@ -94,21 +120,21 @@ header {
 
 .film-card {
   display: flex;
-  flex-wrap: wrap;
-  box-sizing: border-box;
-  min-width: 250px;
-  max-width: 30px;
-  border-radius: 5px;
-  align-items: flex-start;
-  margin: 1rem;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
-  background-color: #1f1f1f;
-  font-size: 1rem;
-  min-height: 300px;
-  padding: 0px;
-  text-align: left;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    flex: 1 0 calc(18% - 20px); /* Adjust the width as needed */
+    border-radius: 5px;
+    align-items: flex-start;
+    margin: 1rem;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+    background-color: #1f1f1f;
+    font-size: 1rem;
+    min-height: 300px;
+    padding: 25px;
+    text-align: left;
+
 }
 
 .film-card img {
@@ -185,6 +211,11 @@ header {
     justify-content: center;
     /* Center cards when fewer fit per row */
   }
+   #shows-list {
+    justify-content: center;
+    /* Center cards when fewer fit per row */
+  }
+
 
   .film-card {
     flex: 1 1 calc(50% - 20px);
@@ -216,4 +247,8 @@ label {
 #episode-count {
   margin: 0 10px 0 10px;
    outline: none;
+}
+
+.select-container {
+  margin: 5px;
 }
